# CafeControl

./: .env-example  .gitignore  Makefile  README.md  docker-compose.yaml  fake.py  fill_db.py  listing.py  main.py  pyproject.toml
src/: main.py
src/core/: config.py  database.py
src/customer/: models.py
src/employee/: models.py
src/menu/: models.py
src/migrations/: env.py
src/migrations/versions/: 2025_12_16_2250-6e9cde1bd4cf_new_tables.py  2025_12_16_2352-445860bca3bc_init.py  2025_12_17_0023-d8b674c3001d_added_shift.py
src/models/: __init__.py
