[project]
name = "backend-template"
version = "0.2.0"
description = "simple backend template using a FastAPI"
authors = [
    {name = "puker228",email = "karatelanalov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "greenlet>=3.2.4",
    "loguru>=0.7.3",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
